Finished processing logic